--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="./public/images/image.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AirVoyage</title>
+    <title>Nu Dem</title>
   </head>
   <body>
     <div id="root"></div>
